<resources>
    <string name="app_name">StudentTeacherCollaborations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="title_activity_faculty_navigation_drawer">FacultyNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="homePage">Home Page</string>
    <string name="facultyLogin">FACULTY LOGIN</string>
    <string name="studentLogin">STUDENT LOGIN</string>
    <string name="facultySignUp">faculty SIGN UP</string>
    <string name="studentSignUp">STUDENT SIGN UP</string>
    <string name="title_activity_student_navigation_drawer">StudentNavigationDrawer</string>
    <string name="download">Download</string>
    <string name="read">Read</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="bubt_annex">BUBT ANNEX</string>
    <string name="log_out">Log out</string>
    <string name="ask_a_question">add question\'s details</string>
    <string name="post">Post</string>
    <string name="enter_a_title">ask a question</string>
    <string name="add_a_comment">add a comment</string>
    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="parvej_alam">Parvej Alam</string>
    <string name="_15162103103">15162103103</string>
    <string name="department_name">Department Name</string>
    <string name="intake">Intake</string>


</resources>