<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consQues">

    <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:foregroundGravity="center">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/conscard">
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".75"/>

                <EditText
                    android:id="@+id/askQuestionTitleEditText"
                    app:layout_constraintTop_toTopOf="@id/conscard"
                    app:layout_constraintRight_toLeftOf="@id/gl_start"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="105dp"
                    android:layout_marginEnd="105dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="20sp"
                    android:hint="@string/enter_a_title"
                    android:background="@drawable/blue_border_rounded_corner"
                    android:inputType="text"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/askQuestionDetailsEditText"
                    app:layout_constraintTop_toBottomOf="@id/askQuestionTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="105dp"
                    android:layout_marginEnd="105dp"
                    android:textSize="20sp"
                    android:hint="@string/ask_a_question"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/blue_border_rounded_corner"
                    android:autofillHints="111" />

                <TextView
                    android:id="@+id/postQuestionButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/blue_fill_rounded_color"
                    android:gravity="center"
                    android:text="@string/post"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/gl_start"
                    app:layout_constraintTop_toTopOf="@id/conscard"
                    app:layout_constraintBottom_toBottomOf="@id/conscard"
                    tools:ignore="RtlCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp" />

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>