<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#8ac185"
    >

       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/viewcons">
               <androidx.cardview.widget.CardView
                   android:id="@+id/cardQuestionsView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   app:layout_constraintTop_toTopOf="@id/viewcons"
                   android:backgroundTint="#22242C"
                   app:cardElevation="5dp"
                   app:cardCornerRadius="25dp">

                   <androidx.cardview.widget.CardView
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="10dp"
                       android:layout_marginLeft="10dp"
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       app:cardCornerRadius="250dp"
                       android:layout_gravity="start|top"
                       app:cardBackgroundColor="@color/colorWhite">

                       <androidx.cardview.widget.CardView
                           android:layout_width="80dp"
                           android:layout_height="80dp"
                           app:cardCornerRadius="250dp"
                           android:layout_gravity="center">

                           <ImageView
                               android:id="@+id/profileShowQuestionView"
                               android:layout_width="80dp"
                               android:layout_height="80dp"
                               android:src="@drawable/ic_profile_picture_1"
                               android:scaleType="centerCrop"
                               android:contentDescription="@string/todo" />

                       </androidx.cardview.widget.CardView>

                   </androidx.cardview.widget.CardView>

                   <TextView
                       android:id="@+id/userNameQuestionsView"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:layout_marginStart="100dp"
                       android:layout_marginLeft="100dp"
                       android:text="@string/download"
                       android:textStyle="bold"
                       android:textSize="22sp"
                       android:textColor="@color/colorDarkYellow"
                       />

                   <TextView
                       android:id="@+id/userUploadTimeQuestionsView"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="100dp"
                       android:layout_marginLeft="100dp"
                       android:layout_marginTop="50dp"
                       android:text="@string/download"
                       android:textStyle="italic"
                       android:textSize="18sp"
                       android:textColor="@color/colorDarkYellow"/>

                   <TextView
                       android:id="@+id/questionTitleView"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="15dp"
                       android:layout_marginLeft="15dp"
                       android:layout_marginTop="100dp"
                       android:layout_marginRight="10dp"
                       android:layout_marginEnd="10dp"
                       android:text="@string/download"
                       android:textStyle="bold"
                       android:textSize="22sp"
                       android:textColor="#747866"/>

                   <TextView
                       android:id="@+id/quesionDetailsView"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="15dp"
                       android:layout_marginLeft="15dp"
                       android:layout_marginTop="130dp"
                       android:layout_marginRight="10dp"
                       android:layout_marginEnd="10dp"
                       android:textAlignment="viewStart"
                       android:text="@string/download"
                       android:textSize="18sp"
                       android:textColor="@color/colorWhite"
                       android:gravity="start" />

               </androidx.cardview.widget.CardView>

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/commentsRecyclerView"
                   app:layout_constraintTop_toBottomOf="@id/cardQuestionsView"
                   android:layout_marginTop="20dp"
                   android:padding="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>



               <androidx.cardview.widget.CardView
                   android:id="@+id/cardAnswers"
                   app:layout_constraintTop_toBottomOf="@+id/commentsRecyclerView"
                   app:layout_constraintBottom_toBottomOf="@id/viewcons"
                   android:layout_marginTop="15dp"
                   android:layout_width="match_parent"
                   android:layout_height="120dp"
                   app:cardCornerRadius="20dp"
                   app:cardElevation="5dp"
                   android:padding="10dp"
                   android:backgroundTint="@color/colorLightGreen"
                   android:foregroundGravity="center_horizontal">

                   <androidx.constraintlayout.widget.ConstraintLayout
                       android:id="@+id/commentCons"
                       android:layout_width="match_parent"
                       android:layout_height="110dp"
                       android:layout_gravity="center_vertical">

                       <androidx.constraintlayout.widget.Guideline
                           android:id="@+id/gl_start"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           app:layout_constraintGuide_percent=".0"/>

                       <androidx.constraintlayout.widget.Guideline
                           android:id="@+id/gl_end"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           app:layout_constraintGuide_percent=".75"/>

                       <EditText
                           android:id="@+id/answerDetailsEditText"
                           android:layout_width="0dp"
                           android:layout_height="100dp"
                           android:layout_marginTop="4dp"
                           android:autofillHints="111"
                           android:background="@drawable/blue_border_rounded_corner"
                           android:hint="@string/add_a_comment"
                           android:inputType="textMultiLine"
                           android:paddingStart="10dp"
                           android:paddingLeft="10dp"
                           android:paddingEnd="5dp"
                           android:paddingRight="5dp"
                           android:textSize="20sp"
                           android:layout_marginRight="5dp"
                           android:layout_marginEnd="5dp"
                           app:layout_constraintLeft_toLeftOf="@id/gl_start"
                           app:layout_constraintRight_toRightOf="@id/gl_end"
                           app:layout_constraintTop_toTopOf="@+id/commentCons"
                           app:layout_constraintBottom_toBottomOf="@id/commentCons"/>


                       <TextView
                           android:id="@+id/postQuestionButton"
                           android:layout_width="100dp"
                           android:layout_height="60dp"
                           android:layout_gravity="center_horizontal"
                           android:background="@drawable/yellow_border_fill_color"
                           android:gravity="center"
                           android:text="@string/post"
                           android:textAlignment="center"
                           android:textColor="#000000"
                           android:textSize="30sp"
                           android:textStyle="bold"
                           app:layout_constraintLeft_toLeftOf="@id/gl_end"
                           app:layout_constraintTop_toTopOf="@id/commentCons"
                           app:layout_constraintBottom_toBottomOf="@id/commentCons"
                           tools:ignore="RtlCompat" />


                   </androidx.constraintlayout.widget.ConstraintLayout>


               </androidx.cardview.widget.CardView>

           </androidx.constraintlayout.widget.ConstraintLayout>


       </androidx.core.widget.NestedScrollView>


</RelativeLayout>